Fixed a bug with tables being too wide on mobile #39971256471672

--- a/css/main.css
+++ b/css/main.css
@@ -202,6 +202,10 @@ img {
 	margin-right: 100px;
 }
 
+td {
+	max-width: calc(100vw - 315px);
+}
+
 /*For Wells*/
 .well-bottom-nav {
 	position: relative;
